5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1715_3066.log
== TEST (2019-05-02 16:26:11) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if(dado1, dado2, dado3 >1 and <12 or qpv<0):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if(dado1, dado2, dado3 >1 and <12 or qpv<0):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:26) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and (dado1,dado2,dado3 <1or>12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and (dado1,dado2,dado3 <1or>12):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:39) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and (dado1,dado2,dado3 <1 or >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and (dado1,dado2,dado3 <1 or >12):
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:04) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and (dado1+dado2+dado3 <1 or >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and (dado1+dado2+dado3 <1 or >12):
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:58) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and (dado1+dado2+dado3 <1 and >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and (dado1+dado2+dado3 <1 and >12):
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:38) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and (dado1,dado2,dado3 <1 and >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and (dado1,dado2,dado3 <1 and >12):
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:59) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and (dado1,dado2,dado3, <1 or >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and (dado1,dado2,dado3, <1 or >12):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:20) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and (dado1,dado2,dado3,<1 or >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and (dado1,dado2,dado3,<1 or >12):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:46) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and (dado1,dado2,dado3,<1 or >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and (dado1,dado2,dado3,<1 or >12):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:14) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and ((dado1,dado2,dado3)<1 or >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and ((dado1,dado2,dado3)<1 or >12):
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:30) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and ((dado1+dado2+dado3)<1 or >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and ((dado1+dado2+dado3)<1 or >12):
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:51) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0) and (dado1,dado2,dado3 <1 or >12):
	print("ENTRADA INVALIDA")
else:
	print(qpv-(dado1+dado2+dado3)*(10))

	
	

-- ERROR:
File "XXXX", line 5
    if (qpv<0) and (dado1,dado2,dado3 <1 or >12):
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:48) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0):
print("ENTRADA INVALIDA")
elif(dado1 <1 or >12):
	print("ENTRADA INVALIDA")
elif(dado2 <1 or >12);
print("ENTRADA INVALIDA")
elif(dado3 <1 or >12):
	print("ENTRADA INVALIDA")
else:
	r=(qpv-(dado1+dado2+dado3)*(10))
if r>0
print("VIVO")
else:
	print("MORTO")

	
	

-- ERROR:
File "XXXX", line 6
    print("ENTRADA INVALIDA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:17) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0):
print("ENTRADA INVALIDA")
if(dado1 <1 or >12):
	print("ENTRADA INVALIDA")
elif(dado2 <1 or >12);
	print("ENTRADA INVALIDA")
elif(dado3 <1 or >12):
	print("ENTRADA INVALIDA")
else:
	r=(qpv-(dado1+dado2+dado3)*(10))
if r>0
print("VIVO")
else:
	print("MORTO")

	
	

-- ERROR:
File "XXXX", line 6
    print("ENTRADA INVALIDA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:28) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0):
print("ENTRADA INVALIDA")
if(dado1 <1 and >12):
	print("ENTRADA INVALIDA")
elif(dado2 <1 or >12);
	print("ENTRADA INVALIDA")
elif(dado3 <1 or >12):
	print("ENTRADA INVALIDA")
else:
	r=(qpv-(dado1+dado2+dado3)*(10))
if r>0
print("VIVO")
else:
	print("MORTO")

	
	

-- ERROR:
File "XXXX", line 6
    print("ENTRADA INVALIDA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:34) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0):
print("ENTRADA INVALIDA")
if(dado1 <1 and dado1 >12):
	print("ENTRADA INVALIDA")
elif(dado2 <1 or >12);
	print("ENTRADA INVALIDA")
elif(dado3 <1 or >12):
	print("ENTRADA INVALIDA")
else:
	r=(qpv-(dado1+dado2+dado3)*(10))
if r>0
print("VIVO")
else:
	print("MORTO")

	
	

-- ERROR:
File "XXXX", line 6
    print("ENTRADA INVALIDA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:47) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0):
print("ENTRADA INVALIDA")
if(dado1 <1 and dado1 >12):
print("ENTRADA INVALIDA")
elif(dado2 <1 or >12);
	print("ENTRADA INVALIDA")
elif(dado3 <1 or >12):
	print("ENTRADA INVALIDA")
else:
	r=(qpv-(dado1+dado2+dado3)*(10))
if r>0
print("VIVO")
else:
	print("MORTO")

	
	

-- ERROR:
File "XXXX", line 6
    print("ENTRADA INVALIDA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:00) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0):
print("ENTRADA INVALIDA")
elif(dado1 <1 and dado1 >12):
	print("ENTRADA INVALIDA")
elif(dado2 <1 or >12);
	print("ENTRADA INVALIDA")
elif(dado3 <1 or >12):
	print("ENTRADA INVALIDA")
else:
	r=(qpv-(dado1+dado2+dado3)*(10))
if r>0
print("VIVO")
else:
	print("MORTO")

	
	

-- ERROR:
File "XXXX", line 6
    print("ENTRADA INVALIDA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:31) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0):
print("ENTRADA INVALIDA")
elif(dado1 <1 and dado1 >12):
	print("ENTRADA INVALIDA")
elif(dado2 <1 and dado2 >12);
	print("ENTRADA INVALIDA")
elif(dado3 <1 and dado3 >12):
	print("ENTRADA INVALIDA")
else:
	r=(qpv-(dado1+dado2+dado3)*(10))
if r>0
print("VIVO")
else:
	print("MORTO")

	
	

-- ERROR:
File "XXXX", line 6
    print("ENTRADA INVALIDA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:44) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0):
print("ENTRADA INVALIDA")
elif(dado1 <1 and dado1 >12):
	print("ENTRADA INVALIDA")
elif(dado2 <1 and dado2 >12):
	print("ENTRADA INVALIDA")
elif(dado3 <1 and dado3 >12):
	print("ENTRADA INVALIDA")
else:
	r=(qpv-(dado1+dado2+dado3)*(10))
if r>0
print("VIVO")
else:
	print("MORTO")

	
	

-- ERROR:
File "XXXX", line 6
    print("ENTRADA INVALIDA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:58) 
-- CODE:
qpv=float(input(" "))
dado1=int(input(" "))
dado2=int(input(" "))
dado3=int(input(" "))
if (qpv<0):
print("ENTRADA INVALIDA")
elif(dado1 <1 and dado1 >12):
	print=("ENTRADA INVALIDA")
elif(dado2 <1 and dado2 >12):
	print("ENTRADA INVALIDA")
elif(dado3 <1 and dado3 >12):
	print("ENTRADA INVALIDA")
else:
	r=(qpv-(dado1+dado2+dado3)*(10))
if r>0
print("VIVO")
else:
	print("MORTO")

	
	

-- ERROR:
File "XXXX", line 6
    print("ENTRADA INVALIDA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
